--- a/templates/character_chat.html
+++ b/templates/character_chat.html
@@ -3,12 +3,12 @@
 <title>{% block title %}Seinfeld Character Bot Chat{% endblock %}</title>
 {% block content %}
 
-
 <div class="subpage-header">
     <h1>Character Bot Chat</h1>
 </div>
 <br>
 <br>
+<!-- Main container for bot chat -->
 <div class="container">
     <div class="float-right">
         <div class="bot-chat">
