--- a/templates/seinfood.html
+++ b/templates/seinfood.html
@@ -17,18 +17,18 @@
         <div class="row"><!-- one giant row for the p, form, photo (and results) -->
             <div class="col-sm-5"><!-- col for left side -->         
                 <div class="page-description">
-                    <p><em>The show Seinfeld often uses food as a plot device. Sometimes the
-                        foods sound tasty, or maybe the show is the first time you're hearing
-                        about this type of thing. Use the local search to see where cuisine
-                        and items mentioned on the show are available near you.</em></p>
-                    <h2>Dine like the characters!</h2>
+                    <p>The show Seinfeld often uses food as a plot device. Sometimes the
+                        foods sound tasty, or maybe it's the first time you're hearing
+                        about that treat. Enter your zip code to find local resturants that serve 
+                        these referenced foods.</p>
+                    
                     <br>
                 </div><!-- end page description -->
                 <div class="row">
                     <div class="col-sm-4">
                         <div class="food-locate-form">
                             <form action="/zip-code">
-                                <label name="your-zip-code">Your zip code: </label>
+                                <label name="your-zip-code" style="font-size: 1.2em; font-weight: bold; color: #4f6d7a;">Your zip code: </label>
                                 <br>
                                 <input class="form-control user-field" type="text" id="zip-code" name="zip-code"
                                     pattern="[0-9]{5,5}" maxlength="5" style="border-radius: 5px">
