--- a/templates/where-are-they-now.html
+++ b/templates/where-are-they-now.html
@@ -53,14 +53,14 @@
                                 <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
                                     data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
-                                        <!-- {% for i in range(jerry_tweet_ids|length) %}
+                                        {% for i in range(jerry_tweet_ids|length) %}
                             <blockquote class="twitter-tweet">
                                 <a href="https://twitter.com/{{ jerry_twitter_handle }}/status/{{ jerry_tweet_ids[i] }}">
                                 </a>
                                 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8">
                                 </script>
                             </blockquote> 
-                            {% endfor %}  -->
+                            {% endfor %} 
                                     </div>
                                 </div>
                             </div> <!-- jerry accodion item ends -->
@@ -81,14 +81,14 @@
                                     data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
 
-                                        <!-- {% for i in range(julia_tweet_ids|length) %}
+                                        {% for i in range(julia_tweet_ids|length) %}
                                 <blockquote class="twitter-tweet">
                                     <a href="https://twitter.com/{{ julia_twitter_handle }}/status/{{ julia_tweet_ids[i] }}">
                                     </a>
                                     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8">
                                     </script>
                                 </blockquote> 
-                                {% endfor %}                         -->
+                                {% endfor %}                        
                                     </div>
                                 </div>
                             </div> <!-- julia accordion item ends -->
@@ -111,14 +111,14 @@
                                     <div id="collapseThree" class="accordion-collapse collapse"
                                         aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                                         <div class="accordion-body">
-                                            <!-- {% for i in range(jason_tweet_ids|length) %}
+                                            {% for i in range(jason_tweet_ids|length) %}
                                         <blockquote class="twitter-tweet">
                                             <a href="https://twitter.com/{{ jason_twitter_handle }}/status/{{ jason_tweet_ids[i] }}">
                                             </a>
                                             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8">
                                             </script>
                                         </blockquote> 
-                                        {% endfor %} -->
+                                        {% endfor %}
                                         </div>
                                     </div>
                                 </div>
@@ -139,14 +139,14 @@
                                     <div id="collapseFour" class="accordion-collapse collapse"
                                         aria-labelledby="headingFour" data-bs-parent="#accordionExample">
                                         <div class="accordion-body">
-                                            <!-- {% for i in range(modern_tweet_ids|length) %}
+                                            {% for i in range(modern_tweet_ids|length) %}
                                         <blockquote class="twitter-tweet">
                                             <a href="https://twitter.com/{{ modern_twitter_handle }}/status/{{ modern_tweet_ids[i] }}">
                                             </a>
                                             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8">
                                             </script>
                                         </blockquote> 
-                                    {% endfor %} -->
+                                    {% endfor %}
                                         </div><!-- accordion body modern ends -->
                                     </div><!-- modern collapse ends -->
                                 </div><!-- modern accordion item ends-->
